Tooltips are shown on wrong position in combination with a dual screen setup. Thanks to Lucas Murray for the patch!

BUG: 167205

svn path=/trunk/KDE/kdebase/apps/; revision=838041